# djour

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  README.md  RELEASE.md  djour-spec.md
.claude/: settings.local.json
.github/workflows/: coverage.yml  lint.yml  release.yml  test.yml
plans/: COMPILE_BYTE_COPY_ARCHITECTURE_REPORT.md  MODE_MIGRATION_PLAN.md
src/: error.rs  lib.rs  main.rs
src/application/: compile_tags.rs  init.rs  list_notes.rs  list_tags.rs  manage_config.rs  migrate_mode.rs  mod.rs  open_note.rs  retag.rs
src/cli/: commands.rs  mod.rs  output.rs
src/domain/: journal.rs  mod.rs  mode.rs  mode_migration.rs  template.rs  time_ref.rs
src/domain/tags/: compiler.rs  mod.rs  parser.rs  query.rs  retag.rs
src/infrastructure/: config.rs  editor.rs  mod.rs  repository.rs
tests/: cli_synthetic.rs  compile_tests.rs  folder_tests.rs  init_tests.rs  list_tests.rs  mode_migration_tests.rs  retag_tests.rs  tags_tests.rs
tests/common/: mod.rs
tests/fixtures/synthetic/01_daily_basic/: scenario.toml
tests/fixtures/synthetic/02_weekly_basic/: scenario.toml
tests/fixtures/synthetic/03_weekly_invalid_preface/: scenario.toml
tests/fixtures/synthetic/04_monthly_basic/: scenario.toml
tests/fixtures/synthetic/05_single_basic/: scenario.toml
tests/fixtures/synthetic/06_single_multi_tag_paragraph/: scenario.toml
tests/fixtures/synthetic/07_compile_link_rewrite/: scenario.toml
tests/fixtures/synthetic/08_compile_section_nested_list/: scenario.toml
(+44 files in other folders)
